--- a/assets/main.css
+++ b/assets/main.css
@@ -33,7 +33,7 @@ body{
     background-attachment: fixed;
     color: #333333;
     text-align:left;
-    font-family:"Yu Gothic", "Noto Sans JP",sans-serif;
+    font-family:"M PLUS Rounded 1c", "Yu Gothic", "Noto Sans JP",sans-serif;
 /*    font-family:"Helvetica Neue",
                 Arial,
                 "Noto Sans JP",
@@ -93,12 +93,13 @@ th,td{
 /* Website Banner */
 .banner {position: relative; font-family:sans-serif,serif;}
 .top-left {font-size:5.33em; color: #505050; background: #fafafa; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;}
-.bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
+.bottom-right {font-family: "M PLUS Rounded 1c", sans-serif; font-size:1.73em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 7px 7px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
 
 /* Conference Title Logo */
 .title1{color: #b2132e; text-shadow: 1px 1px 3px #c0c0c0;} 
 /* .title2{color: #52739e; text-shadow: 1px 1px 3px #c0c0c0; font-size:0.67em;} */
-.title2{color: #1796eb;  font-size:0.6em;}
+/* .title2{color: #1796eb;  font-size:0.6em;} */
+.title2{color: #1796eb;  font-family: "M PLUS Rounded 1c", sans-serif; font-size:0.6em;}
 .year{color: #505050; font-size:0.6em; font-weight: lighter;}
 
 /* Navigation Links (Home, Registration, etc) */
