--- a/assets/main.css
+++ b/assets/main.css
@@ -133,6 +133,11 @@ td.sponsor img{width: 100%}
 
 footer{font-size:0.875em; margin-top:12em; text-align:center;}
 
+/* external font */
+.wf-mplus1p { font-family: "M PLUS 1p"; }
+.wf-roundedmplus1c { font-family: "M PLUS Rounded 1c"; }
+
+
 /* My hacky way of making the site mobile-friendly */
 @media only screen and (max-width: 1100px) {
     h2{font-size:3.00em;}
